--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             200 years, we have improved the lives of millions of people around the world through our unique approach to education, <br>prompting Charles Dickens to 
             terms us the 'People University'.</p>
         <div class="icons">
-            <a href="https://www.facebook.com/dangiabhi332"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com/dangiabhi332?t=RhnqHuCuxHKEgiF0bKcTFA&s=07"><i class="fab fa-facebook-f"></i></a>
         <a href="https://twitter.com/Abhi17756818?s=07"><i class="fab fa-twitter"></i></a>
         <a href="https://www.instagram.com/a.bhishek0806/"><i class="fab fa-instagram-square"></i></a>
         <a href="https://vm.tiktok.com/ZGJBAu4sm/"><i class="fab fa-tiktok"></i></a>
