--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <a href="https://www.instagram.com/a.bhishek0806/"><i class="fab fa-instagram-square"></i></a>
         <a href="https://vm.tiktok.com/ZGJBAu4sm/"><i class="fab fa-tiktok"></i></a>
         </div>
-        <p>Made with<i class="far fa-heart"></i>Abhi-AD<img src="images/personal.png"></p>
+        <p>Made with<i class="far fa-heart"></i>Abhi-AD<img src="personal.png"></p>
         <a href="index.html" class="fa fa-refresh">Refresh</a>
 
     </section>
