--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
             terms us the 'People University'.</p>
         <div class="icons">
             <a href="https://www.facebook.com/dangiabhi332"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/dangiabhi332?t=RhnqHuCuxHKEgiF0bKcTFA&s=07"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/a.bhishek0806/"><i class="fab fa-instagram-square"></i></a>
+        <a href="https://twitter.com/dangiabhi332"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/dangiabhi332/"><i class="fab fa-instagram-square"></i></a>
         <a href="https://vm.tiktok.com/ZGJBAu4sm/"><i class="fab fa-tiktok"></i></a>
         </div>
         <p>Made with<i class="far fa-heart"></i>Abhi-AD<img src="personal.png"></p>
